--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,9 @@ section .DivText {
   white-space: nowrap;
   overflow: hidden;
   width: 30em;
-  animation: type 4s steps(60, end);
+  animation: type 10s steps(60, end), ;
   animation-delay: 2s;
+  
 }
   span{
     animation: blink 1s infinite;
