--- a/css/login.scss
+++ b/css/login.scss
@@ -1,3 +1,6 @@
+/*importações*/
+@import './animações.scss';
+
 body {
     font: optional;
 }
@@ -5,6 +8,7 @@ body {
 #caixa {
     border: solid 1px black;
     border-radius: 20px;
-    padding: 80px;
+    padding: 10px;
     margin: 20px;
+    animation: open_square 2s ease forwards;
 }
