--- a/css/login.css
+++ b/css/login.css
@@ -36,6 +36,20 @@ pra manter o sistema organizado*/
     height: 500px;
   }
 }
+@keyframes open_square_3 {
+  0% {
+    width: 10px;
+    height: 0;
+  }
+  50% {
+    height: 350px;
+    width: 10px;
+  }
+  100% {
+    width: 400px;
+    height: 350px;
+  }
+}
 @keyframes type {
   from {
     width: 0;
@@ -73,5 +87,11 @@ body {
   border-radius: 20px;
   padding: 10px;
   margin: 20px;
-  animation: open_square 2s ease forwards;
+  animation: open_square_3 2s ease forwards;
+}
+
+#caixa form {
+  opacity: 0;
+  animation: aparecer 3s ease forwards;
+  animation-delay: 2s;
 }/*# sourceMappingURL=login.css.map */
