--- a/css/animações.css
+++ b/css/animações.css
@@ -35,6 +35,20 @@ pra manter o sistema organizado*/
     height: 500px;
   }
 }
+@keyframes open_square_3 {
+  0% {
+    width: 10px;
+    height: 0;
+  }
+  50% {
+    height: 350px;
+    width: 10px;
+  }
+  100% {
+    width: 400px;
+    height: 350px;
+  }
+}
 @keyframes type {
   from {
     width: 0;
