--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,16 @@ pra manter o sistema organizado*/
 }
 @keyframes open_square_3 {
   0% {
-    width: 0px !important;
+    width: 10px;
     height: 0;
   }
+  50% {
+    height: 350px;
+    width: 10px;
+  }
   100% {
-    width: 600px !important;
-    height: 300px !important;
+    width: 400px;
+    height: 350px;
   }
 }
 @keyframes type {
@@ -73,13 +77,394 @@ pra manter o sistema organizado*/
     opacity: 100%;
   }
 }
+body {
+  min-height: 100vh;
+  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+  overflow: hidden;
+}
+
+.stars {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120%;
+  transform: rotate(-45deg);
+}
+
+.star {
+  --star-color: var(--primary-color);
+  --star-tail-length: 6em;
+  --star-tail-height: 2px;
+  --star-width: calc(var(--star-tail-length) / 6);
+  --fall-duration: 9s;
+  --tail-fade-duration: var(--fall-duration);
+  position: absolute;
+  top: var(--top-offset);
+  left: 0;
+  width: var(--star-tail-length);
+  height: var(--star-tail-height);
+  color: var(--star-color);
+  background: linear-gradient(45deg, currentColor, transparent);
+  border-radius: 50%;
+  filter: drop-shadow(0 0 6px currentColor);
+  transform: translate3d(104em, 0, 0);
+  animation: fall var(--fall-duration) var(--fall-delay) linear infinite, tail-fade var(--tail-fade-duration) var(--fall-delay) ease-out infinite;
+}
+@media screen and (max-width: 750px) {
+  .star {
+    animation: fall var(--fall-duration) var(--fall-delay) linear infinite;
+  }
+}
+.star:nth-child(1) {
+  --star-tail-length: 7.12em;
+  --top-offset: 46.75vh;
+  --fall-duration: 10.993s;
+  --fall-delay: 8.486s;
+}
+.star:nth-child(2) {
+  --star-tail-length: 7.21em;
+  --top-offset: 11vh;
+  --fall-duration: 6.616s;
+  --fall-delay: 9.333s;
+}
+.star:nth-child(3) {
+  --star-tail-length: 5.59em;
+  --top-offset: 96.53vh;
+  --fall-duration: 6.075s;
+  --fall-delay: 3.614s;
+}
+.star:nth-child(4) {
+  --star-tail-length: 6.91em;
+  --top-offset: 83.44vh;
+  --fall-duration: 9.258s;
+  --fall-delay: 6.015s;
+}
+.star:nth-child(5) {
+  --star-tail-length: 6.08em;
+  --top-offset: 66.01vh;
+  --fall-duration: 10.505s;
+  --fall-delay: 1.698s;
+}
+.star:nth-child(6) {
+  --star-tail-length: 5.57em;
+  --top-offset: 19.25vh;
+  --fall-duration: 9.241s;
+  --fall-delay: 4.311s;
+}
+.star:nth-child(7) {
+  --star-tail-length: 5.2em;
+  --top-offset: 71.14vh;
+  --fall-duration: 8.363s;
+  --fall-delay: 9.087s;
+}
+.star:nth-child(8) {
+  --star-tail-length: 5.06em;
+  --top-offset: 8.38vh;
+  --fall-duration: 8.217s;
+  --fall-delay: 5.771s;
+}
+.star:nth-child(9) {
+  --star-tail-length: 5.59em;
+  --top-offset: 4.59vh;
+  --fall-duration: 8.943s;
+  --fall-delay: 6.052s;
+}
+.star:nth-child(10) {
+  --star-tail-length: 7.29em;
+  --top-offset: 37.58vh;
+  --fall-duration: 8.079s;
+  --fall-delay: 2.787s;
+}
+.star:nth-child(11) {
+  --star-tail-length: 5.07em;
+  --top-offset: 3.23vh;
+  --fall-duration: 9.856s;
+  --fall-delay: 3.662s;
+}
+.star:nth-child(12) {
+  --star-tail-length: 7.18em;
+  --top-offset: 7.36vh;
+  --fall-duration: 7.732s;
+  --fall-delay: 0.286s;
+}
+.star:nth-child(13) {
+  --star-tail-length: 5.9em;
+  --top-offset: 91.25vh;
+  --fall-duration: 10.869s;
+  --fall-delay: 0.37s;
+}
+.star:nth-child(14) {
+  --star-tail-length: 7.25em;
+  --top-offset: 51.27vh;
+  --fall-duration: 10.242s;
+  --fall-delay: 4.559s;
+}
+.star:nth-child(15) {
+  --star-tail-length: 6.62em;
+  --top-offset: 67.02vh;
+  --fall-duration: 6.456s;
+  --fall-delay: 0.253s;
+}
+.star:nth-child(16) {
+  --star-tail-length: 5.03em;
+  --top-offset: 36.49vh;
+  --fall-duration: 10.68s;
+  --fall-delay: 2.283s;
+}
+.star:nth-child(17) {
+  --star-tail-length: 6.35em;
+  --top-offset: 93.07vh;
+  --fall-duration: 6.532s;
+  --fall-delay: 0.999s;
+}
+.star:nth-child(18) {
+  --star-tail-length: 5.08em;
+  --top-offset: 83.03vh;
+  --fall-duration: 11.9s;
+  --fall-delay: 6.723s;
+}
+.star:nth-child(19) {
+  --star-tail-length: 6.23em;
+  --top-offset: 41.2vh;
+  --fall-duration: 10.314s;
+  --fall-delay: 9.726s;
+}
+.star:nth-child(20) {
+  --star-tail-length: 5.05em;
+  --top-offset: 87.64vh;
+  --fall-duration: 10.805s;
+  --fall-delay: 5.994s;
+}
+.star:nth-child(21) {
+  --star-tail-length: 6.02em;
+  --top-offset: 7.93vh;
+  --fall-duration: 10.694s;
+  --fall-delay: 0.748s;
+}
+.star:nth-child(22) {
+  --star-tail-length: 6.8em;
+  --top-offset: 72.23vh;
+  --fall-duration: 10.62s;
+  --fall-delay: 9.032s;
+}
+.star:nth-child(23) {
+  --star-tail-length: 5.87em;
+  --top-offset: 25.94vh;
+  --fall-duration: 11.07s;
+  --fall-delay: 5.741s;
+}
+.star:nth-child(24) {
+  --star-tail-length: 6.07em;
+  --top-offset: 57.95vh;
+  --fall-duration: 8.661s;
+  --fall-delay: 9s;
+}
+.star:nth-child(25) {
+  --star-tail-length: 5.55em;
+  --top-offset: 66.54vh;
+  --fall-duration: 8.667s;
+  --fall-delay: 1.449s;
+}
+.star:nth-child(26) {
+  --star-tail-length: 7.47em;
+  --top-offset: 26.19vh;
+  --fall-duration: 11.133s;
+  --fall-delay: 4.183s;
+}
+.star:nth-child(27) {
+  --star-tail-length: 7.09em;
+  --top-offset: 52.15vh;
+  --fall-duration: 10.619s;
+  --fall-delay: 8.734s;
+}
+.star:nth-child(28) {
+  --star-tail-length: 5.57em;
+  --top-offset: 97.46vh;
+  --fall-duration: 6.512s;
+  --fall-delay: 1.312s;
+}
+.star:nth-child(29) {
+  --star-tail-length: 6.78em;
+  --top-offset: 62.53vh;
+  --fall-duration: 10.221s;
+  --fall-delay: 1.341s;
+}
+.star:nth-child(30) {
+  --star-tail-length: 6.7em;
+  --top-offset: 67.66vh;
+  --fall-duration: 11.203s;
+  --fall-delay: 5.918s;
+}
+.star:nth-child(31) {
+  --star-tail-length: 5.89em;
+  --top-offset: 98.22vh;
+  --fall-duration: 7.046s;
+  --fall-delay: 1.615s;
+}
+.star:nth-child(32) {
+  --star-tail-length: 5.03em;
+  --top-offset: 4.09vh;
+  --fall-duration: 8.553s;
+  --fall-delay: 2.484s;
+}
+.star:nth-child(33) {
+  --star-tail-length: 6.6em;
+  --top-offset: 2.3vh;
+  --fall-duration: 6.021s;
+  --fall-delay: 9.167s;
+}
+.star:nth-child(34) {
+  --star-tail-length: 5.85em;
+  --top-offset: 86.9vh;
+  --fall-duration: 7.368s;
+  --fall-delay: 0.31s;
+}
+.star:nth-child(35) {
+  --star-tail-length: 5.16em;
+  --top-offset: 6.62vh;
+  --fall-duration: 7.197s;
+  --fall-delay: 7.72s;
+}
+.star:nth-child(36) {
+  --star-tail-length: 5.09em;
+  --top-offset: 19.86vh;
+  --fall-duration: 6.407s;
+  --fall-delay: 9.878s;
+}
+.star:nth-child(37) {
+  --star-tail-length: 7.29em;
+  --top-offset: 88vh;
+  --fall-duration: 10.153s;
+  --fall-delay: 7.482s;
+}
+.star:nth-child(38) {
+  --star-tail-length: 5.09em;
+  --top-offset: 49vh;
+  --fall-duration: 7.806s;
+  --fall-delay: 7.155s;
+}
+.star:nth-child(39) {
+  --star-tail-length: 6.39em;
+  --top-offset: 29.2vh;
+  --fall-duration: 10.51s;
+  --fall-delay: 6.534s;
+}
+.star:nth-child(40) {
+  --star-tail-length: 6.78em;
+  --top-offset: 29.98vh;
+  --fall-duration: 8.403s;
+  --fall-delay: 5.884s;
+}
+.star:nth-child(41) {
+  --star-tail-length: 6.25em;
+  --top-offset: 59vh;
+  --fall-duration: 6.188s;
+  --fall-delay: 0.28s;
+}
+.star:nth-child(42) {
+  --star-tail-length: 5.43em;
+  --top-offset: 11.67vh;
+  --fall-duration: 6.035s;
+  --fall-delay: 6.273s;
+}
+.star:nth-child(43) {
+  --star-tail-length: 6.47em;
+  --top-offset: 87.82vh;
+  --fall-duration: 6.684s;
+  --fall-delay: 6.295s;
+}
+.star:nth-child(44) {
+  --star-tail-length: 6.7em;
+  --top-offset: 72vh;
+  --fall-duration: 11.687s;
+  --fall-delay: 2.217s;
+}
+.star:nth-child(45) {
+  --star-tail-length: 5.6em;
+  --top-offset: 68.05vh;
+  --fall-duration: 9.39s;
+  --fall-delay: 7.513s;
+}
+.star:nth-child(46) {
+  --star-tail-length: 6.31em;
+  --top-offset: 57.07vh;
+  --fall-duration: 11.485s;
+  --fall-delay: 0.085s;
+}
+.star:nth-child(47) {
+  --star-tail-length: 5.68em;
+  --top-offset: 63.44vh;
+  --fall-duration: 7.415s;
+  --fall-delay: 7.492s;
+}
+.star:nth-child(48) {
+  --star-tail-length: 7.4em;
+  --top-offset: 24.01vh;
+  --fall-duration: 11.753s;
+  --fall-delay: 4.815s;
+}
+.star:nth-child(49) {
+  --star-tail-length: 6.51em;
+  --top-offset: 1.92vh;
+  --fall-duration: 8.337s;
+  --fall-delay: 8.929s;
+}
+.star:nth-child(50) {
+  --star-tail-length: 6.54em;
+  --top-offset: 88.61vh;
+  --fall-duration: 11.319s;
+  --fall-delay: 5.6s;
+}
+.star::before, .star::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: calc(var(--star-width) / -2);
+  width: var(--star-width);
+  height: 100%;
+  background: linear-gradient(45deg, transparent, currentColor, transparent);
+  border-radius: inherit;
+  animation: blink 2s linear infinite;
+}
+.star::before {
+  transform: rotate(45deg);
+}
+.star::after {
+  transform: rotate(-45deg);
+}
+
+@keyframes fall {
+  to {
+    transform: translate3d(-30em, 0, 0);
+  }
+}
+@keyframes tail-fade {
+  0%, 50% {
+    width: var(--star-tail-length);
+    opacity: 1;
+  }
+  70%, 80% {
+    width: 0;
+    opacity: 0.4;
+  }
+  100% {
+    width: 0;
+    opacity: 0;
+  }
+}
+@keyframes blink {
+  50% {
+    opacity: 0.6;
+  }
+}
 /*Gerais*/
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  background-image: url("../img/background.jpg") !important;
+  background: black;
 }
 
 /*header---------------------------------------------------------------------------------------------------------*/
