--- a/css/bgindex.scss
+++ b/css/bgindex.scss
@@ -5,9 +5,6 @@
   }
   
   body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     min-height: 100vh;
      background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
     overflow: hidden;
@@ -30,7 +27,7 @@
   
   .star {
     $star-count: 50;
-    --star-color: var(--primary-color);
+    --star-color: var(--light-color);
     --star-tail-length: 6em;
     --star-tail-height: 2px;
     --star-width: calc(var(--star-tail-length) / 6);
