--- a/css/bgindex.css
+++ b/css/bgindex.css
@@ -1,7 +1,4 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   min-height: 100vh;
   background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
   overflow: hidden;
@@ -17,7 +14,7 @@ body {
 }
 
 .star {
-  --star-color: var(--primary-color);
+  --star-color: var(--light-color);
   --star-tail-length: 6em;
   --star-tail-height: 2px;
   --star-width: calc(var(--star-tail-length) / 6);
@@ -41,304 +38,304 @@ body {
   }
 }
 .star:nth-child(1) {
-  --star-tail-length: 6.45em;
-  --top-offset: 82.06vh;
-  --fall-duration: 10.364s;
-  --fall-delay: 1.522s;
+  --star-tail-length: 7.34em;
+  --top-offset: 20.39vh;
+  --fall-duration: 6.742s;
+  --fall-delay: 7.614s;
 }
 .star:nth-child(2) {
-  --star-tail-length: 5.73em;
-  --top-offset: 15.34vh;
-  --fall-duration: 9.434s;
-  --fall-delay: 3.91s;
+  --star-tail-length: 7.26em;
+  --top-offset: 28.45vh;
+  --fall-duration: 8.21s;
+  --fall-delay: 5.438s;
 }
 .star:nth-child(3) {
-  --star-tail-length: 7.29em;
-  --top-offset: 12.65vh;
-  --fall-duration: 8.355s;
-  --fall-delay: 6.977s;
+  --star-tail-length: 5.99em;
+  --top-offset: 60.61vh;
+  --fall-duration: 7.61s;
+  --fall-delay: 5.383s;
 }
 .star:nth-child(4) {
-  --star-tail-length: 5.11em;
-  --top-offset: 1.94vh;
-  --fall-duration: 8.392s;
-  --fall-delay: 1.28s;
+  --star-tail-length: 6.76em;
+  --top-offset: 51.54vh;
+  --fall-duration: 9.628s;
+  --fall-delay: 6.749s;
 }
 .star:nth-child(5) {
-  --star-tail-length: 7.27em;
-  --top-offset: 41.41vh;
-  --fall-duration: 7.664s;
-  --fall-delay: 2.515s;
+  --star-tail-length: 6.78em;
+  --top-offset: 8.53vh;
+  --fall-duration: 6.231s;
+  --fall-delay: 8.596s;
 }
 .star:nth-child(6) {
-  --star-tail-length: 6.31em;
-  --top-offset: 19.69vh;
-  --fall-duration: 10.588s;
-  --fall-delay: 9.254s;
+  --star-tail-length: 6.52em;
+  --top-offset: 74.76vh;
+  --fall-duration: 9.802s;
+  --fall-delay: 4.457s;
 }
 .star:nth-child(7) {
-  --star-tail-length: 5.39em;
-  --top-offset: 36.2vh;
-  --fall-duration: 9.987s;
-  --fall-delay: 7.071s;
+  --star-tail-length: 7.1em;
+  --top-offset: 68.55vh;
+  --fall-duration: 9.063s;
+  --fall-delay: 6.413s;
 }
 .star:nth-child(8) {
-  --star-tail-length: 5.45em;
-  --top-offset: 12.85vh;
-  --fall-duration: 8.394s;
-  --fall-delay: 0.613s;
+  --star-tail-length: 6.37em;
+  --top-offset: 21.79vh;
+  --fall-duration: 11.265s;
+  --fall-delay: 8.928s;
 }
 .star:nth-child(9) {
-  --star-tail-length: 5.3em;
-  --top-offset: 53.09vh;
-  --fall-duration: 9.574s;
-  --fall-delay: 2.621s;
+  --star-tail-length: 5.7em;
+  --top-offset: 8.34vh;
+  --fall-duration: 11.373s;
+  --fall-delay: 5.264s;
 }
 .star:nth-child(10) {
-  --star-tail-length: 7.42em;
-  --top-offset: 15.81vh;
-  --fall-duration: 6.918s;
-  --fall-delay: 3.792s;
+  --star-tail-length: 6.29em;
+  --top-offset: 86.46vh;
+  --fall-duration: 7.319s;
+  --fall-delay: 8.114s;
 }
 .star:nth-child(11) {
-  --star-tail-length: 6.22em;
-  --top-offset: 76.9vh;
-  --fall-duration: 6.626s;
-  --fall-delay: 2.125s;
+  --star-tail-length: 5.86em;
+  --top-offset: 73.05vh;
+  --fall-duration: 11.054s;
+  --fall-delay: 0.431s;
 }
 .star:nth-child(12) {
-  --star-tail-length: 7.36em;
-  --top-offset: 2.85vh;
-  --fall-duration: 10.579s;
-  --fall-delay: 8.257s;
+  --star-tail-length: 7.27em;
+  --top-offset: 89.56vh;
+  --fall-duration: 11.621s;
+  --fall-delay: 1.341s;
 }
 .star:nth-child(13) {
-  --star-tail-length: 5.95em;
-  --top-offset: 34.36vh;
-  --fall-duration: 10.488s;
-  --fall-delay: 0.229s;
+  --star-tail-length: 6.32em;
+  --top-offset: 93.46vh;
+  --fall-duration: 6.185s;
+  --fall-delay: 2.353s;
 }
 .star:nth-child(14) {
-  --star-tail-length: 5.33em;
-  --top-offset: 91.24vh;
-  --fall-duration: 6.061s;
-  --fall-delay: 9.434s;
+  --star-tail-length: 5.47em;
+  --top-offset: 35.09vh;
+  --fall-duration: 10.838s;
+  --fall-delay: 2.452s;
 }
 .star:nth-child(15) {
-  --star-tail-length: 6.09em;
-  --top-offset: 9.01vh;
-  --fall-duration: 11.849s;
-  --fall-delay: 2.676s;
+  --star-tail-length: 5.9em;
+  --top-offset: 4.65vh;
+  --fall-duration: 8.552s;
+  --fall-delay: 6.041s;
 }
 .star:nth-child(16) {
-  --star-tail-length: 5.14em;
-  --top-offset: 66.37vh;
-  --fall-duration: 11.44s;
-  --fall-delay: 1.554s;
+  --star-tail-length: 5.43em;
+  --top-offset: 23.12vh;
+  --fall-duration: 7.881s;
+  --fall-delay: 3.113s;
 }
 .star:nth-child(17) {
-  --star-tail-length: 7.36em;
-  --top-offset: 81.61vh;
-  --fall-duration: 9.01s;
-  --fall-delay: 9.947s;
+  --star-tail-length: 5.02em;
+  --top-offset: 80.48vh;
+  --fall-duration: 10.3s;
+  --fall-delay: 0.638s;
 }
 .star:nth-child(18) {
-  --star-tail-length: 7.38em;
-  --top-offset: 80.17vh;
-  --fall-duration: 7.571s;
-  --fall-delay: 8.609s;
+  --star-tail-length: 5.05em;
+  --top-offset: 90.92vh;
+  --fall-duration: 6.234s;
+  --fall-delay: 5.307s;
 }
 .star:nth-child(19) {
-  --star-tail-length: 7.49em;
-  --top-offset: 11.25vh;
-  --fall-duration: 6.559s;
-  --fall-delay: 8.204s;
+  --star-tail-length: 6.06em;
+  --top-offset: 99.56vh;
+  --fall-duration: 10.828s;
+  --fall-delay: 1.966s;
 }
 .star:nth-child(20) {
-  --star-tail-length: 6.77em;
-  --top-offset: 87.56vh;
-  --fall-duration: 10.258s;
-  --fall-delay: 0.7s;
+  --star-tail-length: 5.91em;
+  --top-offset: 90.11vh;
+  --fall-duration: 8.664s;
+  --fall-delay: 7.855s;
 }
 .star:nth-child(21) {
-  --star-tail-length: 5.3em;
-  --top-offset: 66.73vh;
-  --fall-duration: 9.496s;
-  --fall-delay: 8.852s;
+  --star-tail-length: 5.34em;
+  --top-offset: 66.19vh;
+  --fall-duration: 10.76s;
+  --fall-delay: 4.304s;
 }
 .star:nth-child(22) {
-  --star-tail-length: 6.95em;
-  --top-offset: 61.1vh;
-  --fall-duration: 9.384s;
-  --fall-delay: 6.336s;
+  --star-tail-length: 6.59em;
+  --top-offset: 30.71vh;
+  --fall-duration: 9.869s;
+  --fall-delay: 8.146s;
 }
 .star:nth-child(23) {
-  --star-tail-length: 7.46em;
-  --top-offset: 27.21vh;
-  --fall-duration: 10.862s;
-  --fall-delay: 8.979s;
+  --star-tail-length: 5.81em;
+  --top-offset: 12.64vh;
+  --fall-duration: 6.264s;
+  --fall-delay: 3.129s;
 }
 .star:nth-child(24) {
-  --star-tail-length: 6.36em;
-  --top-offset: 79.46vh;
-  --fall-duration: 10.06s;
-  --fall-delay: 6.624s;
+  --star-tail-length: 5.38em;
+  --top-offset: 56.24vh;
+  --fall-duration: 6.07s;
+  --fall-delay: 2.27s;
 }
 .star:nth-child(25) {
-  --star-tail-length: 5.72em;
-  --top-offset: 10.51vh;
-  --fall-duration: 7.385s;
-  --fall-delay: 9.661s;
+  --star-tail-length: 7.46em;
+  --top-offset: 59.82vh;
+  --fall-duration: 11.733s;
+  --fall-delay: 8.458s;
 }
 .star:nth-child(26) {
-  --star-tail-length: 6.59em;
-  --top-offset: 53.65vh;
-  --fall-duration: 8.258s;
-  --fall-delay: 5.951s;
+  --star-tail-length: 7.27em;
+  --top-offset: 98.25vh;
+  --fall-duration: 7.814s;
+  --fall-delay: 8.169s;
 }
 .star:nth-child(27) {
-  --star-tail-length: 6.13em;
-  --top-offset: 55.59vh;
-  --fall-duration: 8.505s;
-  --fall-delay: 9.784s;
+  --star-tail-length: 5.66em;
+  --top-offset: 16.54vh;
+  --fall-duration: 10.089s;
+  --fall-delay: 0.442s;
 }
 .star:nth-child(28) {
-  --star-tail-length: 6em;
-  --top-offset: 76.93vh;
-  --fall-duration: 11.411s;
-  --fall-delay: 2.238s;
+  --star-tail-length: 5.87em;
+  --top-offset: 69.21vh;
+  --fall-duration: 8.52s;
+  --fall-delay: 4.745s;
 }
 .star:nth-child(29) {
-  --star-tail-length: 6.28em;
-  --top-offset: 37.92vh;
-  --fall-duration: 6.204s;
-  --fall-delay: 8.285s;
+  --star-tail-length: 5.95em;
+  --top-offset: 49.32vh;
+  --fall-duration: 9.585s;
+  --fall-delay: 0.773s;
 }
 .star:nth-child(30) {
-  --star-tail-length: 7.23em;
-  --top-offset: 72.39vh;
-  --fall-duration: 9.848s;
-  --fall-delay: 3.846s;
+  --star-tail-length: 6.8em;
+  --top-offset: 69.43vh;
+  --fall-duration: 7.683s;
+  --fall-delay: 4.692s;
 }
 .star:nth-child(31) {
-  --star-tail-length: 6.09em;
-  --top-offset: 56.27vh;
-  --fall-duration: 11.968s;
-  --fall-delay: 1.384s;
+  --star-tail-length: 5.81em;
+  --top-offset: 40.98vh;
+  --fall-duration: 10.999s;
+  --fall-delay: 4.693s;
 }
 .star:nth-child(32) {
-  --star-tail-length: 6.93em;
-  --top-offset: 70.13vh;
-  --fall-duration: 8.661s;
-  --fall-delay: 7.175s;
+  --star-tail-length: 5.61em;
+  --top-offset: 93.38vh;
+  --fall-duration: 7.86s;
+  --fall-delay: 9.549s;
 }
 .star:nth-child(33) {
-  --star-tail-length: 6.27em;
-  --top-offset: 50.58vh;
-  --fall-duration: 9.985s;
-  --fall-delay: 1.146s;
+  --star-tail-length: 5.8em;
+  --top-offset: 5.14vh;
+  --fall-duration: 6.267s;
+  --fall-delay: 4.304s;
 }
 .star:nth-child(34) {
-  --star-tail-length: 5.55em;
-  --top-offset: 66.09vh;
-  --fall-duration: 7.803s;
-  --fall-delay: 3.589s;
+  --star-tail-length: 5.48em;
+  --top-offset: 33.42vh;
+  --fall-duration: 8.576s;
+  --fall-delay: 5.485s;
 }
 .star:nth-child(35) {
-  --star-tail-length: 6.24em;
-  --top-offset: 37.58vh;
-  --fall-duration: 11.531s;
-  --fall-delay: 4.106s;
+  --star-tail-length: 6.56em;
+  --top-offset: 0.81vh;
+  --fall-duration: 6.352s;
+  --fall-delay: 0.007s;
 }
 .star:nth-child(36) {
-  --star-tail-length: 5.27em;
-  --top-offset: 71.81vh;
-  --fall-duration: 11.009s;
-  --fall-delay: 4.97s;
+  --star-tail-length: 5em;
+  --top-offset: 81vh;
+  --fall-duration: 8.259s;
+  --fall-delay: 2.816s;
 }
 .star:nth-child(37) {
-  --star-tail-length: 6.37em;
-  --top-offset: 99.58vh;
-  --fall-duration: 7.066s;
-  --fall-delay: 3.125s;
+  --star-tail-length: 7.19em;
+  --top-offset: 72.18vh;
+  --fall-duration: 8.053s;
+  --fall-delay: 5.924s;
 }
 .star:nth-child(38) {
-  --star-tail-length: 6.37em;
-  --top-offset: 70.69vh;
-  --fall-duration: 11.986s;
-  --fall-delay: 0.052s;
+  --star-tail-length: 6.16em;
+  --top-offset: 15.6vh;
+  --fall-duration: 7.312s;
+  --fall-delay: 5.392s;
 }
 .star:nth-child(39) {
-  --star-tail-length: 6.39em;
-  --top-offset: 71.11vh;
-  --fall-duration: 9.371s;
-  --fall-delay: 3.547s;
+  --star-tail-length: 6.58em;
+  --top-offset: 9.59vh;
+  --fall-duration: 7.595s;
+  --fall-delay: 1.023s;
 }
 .star:nth-child(40) {
-  --star-tail-length: 5.22em;
-  --top-offset: 75.83vh;
-  --fall-duration: 9.356s;
-  --fall-delay: 9.68s;
+  --star-tail-length: 7.12em;
+  --top-offset: 91.45vh;
+  --fall-duration: 9.987s;
+  --fall-delay: 1.003s;
 }
 .star:nth-child(41) {
-  --star-tail-length: 6.76em;
-  --top-offset: 89.67vh;
-  --fall-duration: 10.29s;
-  --fall-delay: 6.05s;
+  --star-tail-length: 5.51em;
+  --top-offset: 62.21vh;
+  --fall-duration: 11.752s;
+  --fall-delay: 1.352s;
 }
 .star:nth-child(42) {
-  --star-tail-length: 6.16em;
-  --top-offset: 82.78vh;
-  --fall-duration: 11.678s;
-  --fall-delay: 5.725s;
+  --star-tail-length: 6.71em;
+  --top-offset: 84.45vh;
+  --fall-duration: 9.419s;
+  --fall-delay: 4.244s;
 }
 .star:nth-child(43) {
-  --star-tail-length: 5.69em;
-  --top-offset: 83.58vh;
-  --fall-duration: 7.619s;
-  --fall-delay: 7.397s;
+  --star-tail-length: 6.11em;
+  --top-offset: 41.41vh;
+  --fall-duration: 7.055s;
+  --fall-delay: 7.496s;
 }
 .star:nth-child(44) {
-  --star-tail-length: 6.42em;
-  --top-offset: 43.15vh;
-  --fall-duration: 7.008s;
-  --fall-delay: 5.812s;
+  --star-tail-length: 5.69em;
+  --top-offset: 13.25vh;
+  --fall-duration: 9.998s;
+  --fall-delay: 4.675s;
 }
 .star:nth-child(45) {
-  --star-tail-length: 6.57em;
-  --top-offset: 1.87vh;
-  --fall-duration: 7.494s;
-  --fall-delay: 0.551s;
+  --star-tail-length: 7.32em;
+  --top-offset: 42.66vh;
+  --fall-duration: 9.793s;
+  --fall-delay: 1.22s;
 }
 .star:nth-child(46) {
-  --star-tail-length: 5.09em;
-  --top-offset: 27.97vh;
-  --fall-duration: 8.246s;
-  --fall-delay: 5.639s;
+  --star-tail-length: 7.06em;
+  --top-offset: 52.57vh;
+  --fall-duration: 8.713s;
+  --fall-delay: 4.598s;
 }
 .star:nth-child(47) {
-  --star-tail-length: 7.39em;
-  --top-offset: 9.03vh;
-  --fall-duration: 11.27s;
-  --fall-delay: 5.797s;
+  --star-tail-length: 6.44em;
+  --top-offset: 42.31vh;
+  --fall-duration: 8.187s;
+  --fall-delay: 0.484s;
 }
 .star:nth-child(48) {
-  --star-tail-length: 7.02em;
-  --top-offset: 48.47vh;
-  --fall-duration: 10.866s;
-  --fall-delay: 7.75s;
+  --star-tail-length: 5.16em;
+  --top-offset: 87.01vh;
+  --fall-duration: 10.582s;
+  --fall-delay: 7.679s;
 }
 .star:nth-child(49) {
-  --star-tail-length: 6.47em;
-  --top-offset: 77.55vh;
-  --fall-duration: 7.352s;
-  --fall-delay: 9.967s;
+  --star-tail-length: 6.17em;
+  --top-offset: 90.23vh;
+  --fall-duration: 11.259s;
+  --fall-delay: 7.282s;
 }
 .star:nth-child(50) {
-  --star-tail-length: 6.96em;
-  --top-offset: 39.46vh;
-  --fall-duration: 6.823s;
-  --fall-delay: 5.554s;
+  --star-tail-length: 5.1em;
+  --top-offset: 65.69vh;
+  --fall-duration: 9.853s;
+  --fall-delay: 5.607s;
 }
 .star::before, .star::after {
   position: absolute;
